# leerio

./: .dockerignore  .editorconfig  .env.example  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Caddyfile  DESIGN.md  Makefile  _library.py  docker-compose.override.yml  docker-compose.yml  pyproject.toml  yt-cookies.txt
.githooks/: commit-msg  pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  vps-setup.yml
app/: .dockerignore  .gitignore  Dockerfile  capacitor.config.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
app/android/: gradle.properties
app/e2e/: auth.setup.ts  fixtures.ts
app/public/: manifest.json
app/src/: App.vue  api.test.ts  api.ts  main.ts  router.ts  style.css  types.ts
data/: .gitignore
docs/: TODO.md  code-dump-apk-onboarding.txt  session-dump-2026-03-20.md  session-dump-2026-03-21.md
docs/plans/: 2026-03-05-mobile-adaptation-design.md  2026-03-05-mobile-adaptation.md  2026-03-05-sqlite-s3-migration-design.md  2026-03-14-ux-audit-fixes.md  (+2 more)
landing/: index.html  privacy.html  style.css
scripts/: brainstorm-server.sh  deploy.sh  fill_descriptions.py  fix-book-languages.py  migrate_catalog_visibility.py
server/: Dockerfile  api.py  auth.py  constants.py  core.py  db.py  email.py  entrypoint.sh  ingest_api.py  librivox.py  metadata.py  migrate_to_multitenancy.py  migrate_to_sqlite.py  payments.py  requirements-dev.txt  requirements.txt  storage.py  tts.py  tts_api.py  upload.py  youtube_api.py
(+199 files in other folders)
